...
    <string name="title_scanner">Scan</string>
    <string name="title_scanner_add">Scan to Add</string>
    <string name="title_profile">Me</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_title">Book Friends</string>
    <string name="login_description">Books for friends, but also not friends</string>
    <string name="login_username_error">Cannot find username</string>
    <string name="login_password_error">Password is incorrect</string>
    <string name="create_account_title">Create Account</string>
    <string name="username_empty_error">Username cannot be empty</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="string_create_one">Create Account</string>
    <string name="string_login">Login</string>
    <string name="string_logged_in">Logged in</string>
...
    <string name="string_logout">Logout</string>
    <string name="icon_email">icon_email</string>
    <string name="icon_phone">icon_phone</string>
    <string name="profile_edit">profile_edit</string>
    <string name="edit_email">Edit Email</string>
    <string name="title_edit_profile">Edit Contact Information</string>
    <string name="edit_cancel">CANCEL</string>
    <string name="edit_confirm">CONFIRM</string>
    <string name="m_not_valid_email">Email address is INVALID</string>
    <string name="string_isbn">ISBN:</string>
    <string name="string_title">Title:</string>
    <string name="string_author">Author:</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
...
