<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/button_round_corner"
    >

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:autofillHints="email"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/title_edit_profile"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_confirm"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:text="@string/edit_confirm"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="55dp"
        android:gravity="start"
        android:text="@string/edit_cancel"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>